[Bug #21989] Fix FiberError init order to precede all possible usage

The `FiberError` class can be used in `fiber_pool_initialize` through
`fiber_pool_expand` but `FiberError` was defined after
`fiber_pool_initialize` in `Init_Cont`. This commit moves the definition
of `FiberError` before `fiber_pool_initialize` to ensure that
`FiberError` is defined before any possible usage.